# headingmd

./: README.md  pyproject.toml
src/headingmd/: __init__.py  index.py
tests/: test_index.py
